# api/swagger.json
@@ -83,6 +83,39 @@
                 }
             }
         },
+        "/getevent/{currdaystr}" : {
+            "get" : {
+                "summary" : "Get a events",
+                "description": "Get a events",
+                "produces": ["application/json"],
+                "parameters": [
+                    {
+                        "name": "dayStr",
+                        "in": "path",
+                        "description": "task id that needs to be deleted",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/todosResponse"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid status value",
+                        "schema": {
+                            "$ref": "#/definitions/InvalidResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/event/" : {
             "put" : {
                 "summary" : "Update the events",
